--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,900&display=swap" rel="stylesheet">
   <title>Thinkahoy</title>
   <base href="/">
+
   <link rel="icon" type="image/x-icon" href="assets/img/favicon-32x32.png">
 </head>
 
@@ -32,8 +33,8 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCmDnWPXKL0ZeIyYhtqPz31-UgaWOn1mM&callback=initMap"
-    async defer></script>
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDCmDnWPXKL0ZeIyYhtqPz31-UgaWOn1mM&callback=initMap"
+    async defer></script> -->
 
   <!-- <script src="https//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 <script src="https//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
